--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
   },
   "dependencies": {
     "classnames": "^2.2.4",
+    "create-react-class": "^15.5.3",
+    "prop-types": "^15.5.9",
     "react-input-autosize": "^1.1.0"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
     "coveralls": "^2.11.12",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.15.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.0",
     "gulp": "^3.9.1",
     "isomorphic-fetch": "^2.2.1",
     "istanbul": "^0.4.5",
-    "jsdom": "^9.5.0",
+    "jsdom": "^10.1.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.0.2",
     "react": "^15.0",
     "react-addons-shallow-compare": "^15.0",
@@ -32,10 +37,10 @@
     "react-component-gulp-tasks": "^0.7.7",
     "react-dom": "^15.0",
     "react-gravatar": "^2.4.5",
-    "react-highlight-words": "^0.3.0",
-    "react-virtualized": "^7.23.0",
-    "react-virtualized-select": "^1.4.0",
-    "sinon": "^1.17.5",
+    "react-highlight-words": "^0.7.2",
+    "react-virtualized": "^9.7.5",
+    "react-virtualized-select": "^3.0.1",
+    "sinon": "^2.2.0",
     "unexpected": "^10.17.0",
     "unexpected-dom": "^3.1.0",
     "unexpected-react": "^3.2.4",
@@ -56,14 +61,14 @@
     "bump": "gulp bump",
     "bump:major": "gulp bump:major",
     "bump:minor": "gulp bump:minor",
-    "cover": "istanbul cover _mocha -- -u exports --compilers js:babel/register -R spec",
-    "coveralls": "NODE_ENV=test istanbul cover _mocha --report lcovonly -- -u exports --compilers js:babel/register -R spec && cat coverage/lcov.info | coveralls",
+    "cover": "istanbul cover _mocha -- -u exports -r jsdom-global/register --compilers js:babel-register -R spec",
+    "coveralls": "NODE_ENV=test istanbul cover _mocha --report lcovonly -- -u exports --compilers js:babel-register -R spec && cat coverage/lcov.info | coveralls",
     "examples": "gulp dev:server",
     "lint": "eslint .",
     "publish:examples": "NODE_ENV=production gulp publish:examples",
     "release": "NODE_ENV=production gulp release",
     "start": "gulp dev",
-    "test": "npm run lint && mocha --compilers js:babel/register",
+    "test": "npm run lint && mocha --compilers js:babel-register",
     "watch": "gulp watch:lib"
   },
   "keywords": [
